--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* html {
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(to top, #5b95e7 0%, #a3e9ee 100%);
+} */
