--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -25,58 +25,55 @@
 
         <div class = "row" id = "groups">
             <h2>Group (5)</h2>
-                <div class = "col-sm-3">
-                    <div class = "dropdown" (mouseenter) = "channelMenu1()" (mouseleave) = "channelMenu1()">
-                        <p class = "groupname">group1</p>
+            <div class = "container text-center p-0 m-auto w-100">
+                <div class = "row row-cols-3 row-cols-lg-6 p-0 m-0">
+                    <div class = "dropdown col-lg" id = "group">
+                        <h5>Group1</h5>
                         <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
-                    <!-- <div *ngIf = "group1"> -->
                         <div class = "dropdown-content">
                             <a class = "dropdown-item">Channel A</a>
                             <a class = "dropdown-item">Channel B</a>
                             <a class = "dropdown-item">Channel C</a>
                         </div>
-                    <!-- </div> -->
                     </div>
-                </div>
-                <div class = "col-sm-3">
-                    <div class = "dropdown" (mouseenter) = "channelMenu1()" (mouseleave) = "channelMenu1()">
-                        <p class = "groupname">group1</p>
+                    <div class = "dropdown col-lg">
+                        <h5>Group2</h5>
                         <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
-                        <!-- <div *ngIf = "group1"> -->
-                            <div class = "dropdown-content">
-                                <a class = "dropdown-item">Channel A</a>
-                                <a class = "dropdown-item">Channel B</a>
-                                <a class = "dropdown-item">Channel C</a>
-                            </div>
-                        <!-- </div> -->
+                        <div class = "dropdown-content">
+                            <a class = "dropdown-item">Channel A</a>
+                            <a class = "dropdown-item">Channel B</a>
+                            <a class = "dropdown-item">Channel C</a>
+                            <a class = "dropdown-item" (click) = "groupDetailsModal()">More...</a>
                         </div>
-                </div>
-                <div class = "col-sm-3">
-                    <div class = "dropdown" (mouseenter) = "channelMenu1()" (mouseleave) = "channelMenu1()">
-                        <h5 class = "groupname">group1</h5>
+                    </div>
+                    <div class = "dropdown col-lg">
+                        <h5>Group3</h5>
                         <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
                     </div>
-                </div>
-                <div class = "col-sm-3">
-                    <div class = "dropdown" (mouseenter) = "channelMenu1()" (mouseleave) = "channelMenu1()">
-                        <h5 class = "groupname">group1</h5>
+                    <div class = "dropdown col-lg">
+                        <h5>Group3</h5>
                         <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
-                        </div>
-                </div>
-                <div class = "col-sm-3">
-                    <div class = "dropdown" (mouseenter) = "channelMenu1()" (mouseleave) = "channelMenu1()">
-                        <p class = "groupname">group1</p>
+                    </div>
+                    <div class = "dropdown col-lg">
+                        <h5>Group3</h5>
                         <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
+                    </div>
+                    <div class = "dropdown col-lg">
+                        <h5>Group3</h5>
+                        <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
+                    </div>
+                    <div class = "dropdown col-lg">
+                        <h5>Group3</h5>
+                        <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
+                    </div>
+                </div>
 
-                        </div>
-                </div>
+            </div>
 
             
             
             
         </div>
-        
-              
         
     </div>
    
