--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,6 @@
     width: 100%;
     background: linear-gradient(to top, #5b95e7 0%, #a3e9ee 100%);
 } */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
