--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -10,9 +10,9 @@
     padding: 20px;
 }
 
-.col-lg, #group-row, #logout, #user, #user-pfp, #name, #pic, #user-data, #user-details, #group-table, #group-table td, #groups, .dropdown {
+/* .col-lg, #group-row, #logout, #user, #user-pfp, #name, #pic, #user-data, #user-details, #group-table, #group-table td, #groups, .dropdown {
     border: black solid 1px;
-}
+} */
 
 .dropdown {
     position: relative;
@@ -32,7 +32,6 @@
     position: absolute;
     width: 82%;
     margin: auto;
-    border: black solid 1px;
     z-index: 1;
 }
 
@@ -59,7 +58,7 @@
     position: relative;
 }
 
-.btn {
+.logout {
     font-style: bold;
     color: #03227e;
     border: #03227e solid 1.75px;
@@ -69,13 +68,13 @@
     padding: 5px;
 }
 
-.btn:hover {
+.logout:hover {
     color: #011864;
     border: #011864 solid 1.75px;
     background: rgba(57, 96, 165, 0.4);
 }
 
-.btn:active {
+.logout:active {
     color: #071131;
     border: #071131 solid 1.75px;
     background: rgba(13, 25, 57, 0.4);
