--- a/src/app/group-details/group-details.component.html
+++ b/src/app/group-details/group-details.component.html
@@ -1,42 +1,108 @@
 <!-- Group Details Modal -->
 
-<div class = "modal-header">
+<div class = "modal-header py-2">
     <h5 class = "modal-title">Group Name (XX)</h5>
+    <!-- <h5 class = "modal-title">Create New Channel</h5> -->
+    <!-- <h5 class = "modal-title">Create New Group</h5> -->
     <button type = "button" class = "btn-close" (click) = "closeModal('close')"></button>
 </div>
 
-<div class = "modal-body">
-    <p class = "fw-light mt-0">Joined on dd mmm yyyy</p>
-    <p>Your Role: xxxx</p>
-    <hr>
-    <div class = "container">
-        <div class = "row">
-            <p><i class = "bi bi-chat-dots pe-1"></i>Online Members: XX</p>
+<div class = "modal-body pt-2 pb-1">
+    <div class = "row">
+        <div class = "col">
+            <i class = "bi bi-person-badge pe-1"></i>Group Admin: XXX (You)<br>
+            <i class = "bi bi-person-badge-fill pe-1"></i>Group Assis: XXX
         </div>
-        <div class = "row row-cols-3 row-cols-lg-4">
-            <div class = "col-lg border">
-                Channel Name
-            </div>
-            <div class = "col-lg border">
-                Channel Name
-            </div>
-            <div class = "col-lg border">
-                Channel Name
-            </div>
-            <div class = "col-lg border">
-                Channel Name
-            </div>
-            <div class = "col-lg border">
-                Channel Name
-            </div>
-            <div class = "col-lg border">
-                Channel Name
-            </div>
+        <div class = "col align-self-end text-end">
+            <button type = "button" class = "btn btn-danger py-1" (click) = "closeModal('changes saved!')">Delete Group</button>
         </div>
     </div>
+    <hr class = "my-2 py-0">
+    <div class = "row">
+        <p class = "mb-2"><i class = "bi bi-chat-dots pe-1"></i>Online Members: XX</p>
+    </div>
+    <div class = "row row-cols-3 row-cols-lg-5 py-2 mb-0">
+        <div class = "col-lg text-center mb-3">
+            <span class = "roomname border border-secondary rounded-pill px-3 py-1 text-nowrap">Channel Name</span>
+        </div>
+        <div class = "col-lg text-center mb-3">
+            <span class = "roomname border border-secondary rounded-pill px-3 py-1 text-nowrap">Channel Name</span>
+        </div>
+        <div class = "col-lg text-centermb-3">
+            <span class = "roomname border border-secondary rounded-pill px-3 py-1 text-nowrap">Channel Name</span>
+        </div>
+        <div class = "col-lg text-center mb-3">
+            <span class = "roomname border border-secondary rounded-pill px-3 py-1 text-nowrap">Channel Name</span>
+        </div>
+        <div class = "col-lg text-center mb-3">
+            <span class = "roomname border border-secondary rounded-pill px-3 py-1 text-nowrap">Channel Name</span>
+        </div>
+        <div class = "col-lg text-center mb-3">
+            <span class = "roomname border border-secondary rounded-pill px-3 py-1 text-nowrap">Channel Name</span>
+        </div>
+    </div>
+
+
+    <!-- <div class = "container mt-2">
+        <div class = "row mb-2">
+            <label class = "col-2 col-lg-1 col-form-label me-2">Name</label>
+            <div class = "col-8">
+                <input type = "text" class = "form-control form-control-sm" placeholder = "Channel Name">
+            </div> 
+        </div>
+        <div class = "row mb-2">
+            <label class = "col-2 col-lg-1 form-label me-2">Member</label>
+            <div class = "col-8">
+                <input type = "text" class = "form-control form-control-sm" placeholder = "Add a member">
+            </div>
+            <div class = "col-1 p-0">
+                <button type = "button" class = "btn btn-outline-primary btn-sm">Add</button>
+            </div>
+        </div>
+        <div class = "row mb-2">
+            <div class = "col offset-2 offset-lg-1 p-0">
+                <ul>
+                    <li>User 1</li>
+                    <li>User 2</li>
+                    <li>User 3</li>
+                </ul>
+            </div>
+        </div>
+    </div> -->
+
+    <!-- <div class = "row mb-2">
+        <label class = "col-2 col-lg-1 col-form-label me-2">Name</label>
+        <div class = "col-8">
+            <input type = "text" class = "form-control form-control-sm" placeholder = "Group Name">
+        </div> 
+    </div>
+    <div class = "row mb-2">
+        <label class = "col-2 col-lg-1 form-label me-2">Channel</label>
+        <div class = "col-8">
+            <input type = "text" class = "form-control form-control-sm" placeholder = "Add a channel">
+        </div>
+        <div class = "col-1 p-0">
+            <button type = "button" class = "btn btn-outline-primary btn-sm">Add</button>
+        </div>
+    </div>
+    <div class = "row mb-2">
+        <div class = "col offset-2 offset-lg-1 p-0">
+            <ul>
+                <li>Channel 1</li>
+                <li>Channel 2</li>
+                <li>Channel 3</li>
+            </ul>
+        </div>
+    </div> -->
 </div>
 
-<div class = "modal-footer">
-    <button type = "button" class = "btn btn-secondary" data-dismiss = "modal" (click) = "closeModal('close')">Close</button>
-    <button type = "button" class = "btn btn-primary" (click) = "closeModal('changes saved!')">Save Changes</button>
+<div class = "modal-footer py-2 justify-content-between">
+    <!-- If Group Admin/Group Assis-->
+    <button type = "button" class = "btn btn-secondary py-1" (click) = "closeModal('changes saved!')">Create Channel</button>
+    <div>
+        <button type = "button" class = "btn btn-danger py-1" (click) = "closeModal('changes saved!')">Delete Channel</button>
+        <button type = "button" class = "btn btn-primary py-1 ms-2" (click) = "closeModal('changes saved!')">Join Channel</button>
+    </div>
+    <!-- <button type = "button" class = "btn btn-secondary py-1" (click) = "closeModal('changes saved!')">Back</button>
+    <button type = "button" class = "btn btn-primary py-1" (click) = "closeModal('changes saved!')">Create</button> -->
 </div>
