--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -18,7 +18,7 @@
             <button type = "button" class = "btn btn-primary text-nowrap">LEAVE CHAT</button>
         </div>
     </div>
-    <div class = "member-canvas offcanvas offcanvas-end">
+    <!-- <div class = "member-canvas offcanvas offcanvas-end">
         <div class = "offcanvas-header border py-2">
             <h5 class = "offcanvas-title">MEMBER</h5>
             <button type = "button" class = "btn-close" data-bs-dismiss = "offcanvas"></button>
@@ -29,9 +29,9 @@
                 <li><i class = "bi bi-moon pe-2"></i>User 123456</li>
             </ul>
         </div>
-    </div>
+    </div> -->
     <div class = "row m-0 min-vh-100">
-        <div class = "offcanvas-lg col-2 border p-0" id = "channellistcol">
+        <!-- <div class = "col-2 border p-0" id = "channellistcol">
             <div class = "container position-relative border border-primary m-auto h-100 text-center">
                 <h3 class = "mt-2">GROUPNAME</h3> 
                 <hr class = "mt-1"> 
@@ -45,11 +45,28 @@
                     <button type = "button" class = "btn btn-primary text-nowrap">LEAVE CHAT</button>
                 </div>
             </div> 
+        </div> -->
+        <div class = "offcanvas-lg offcanvas-start col-2 border p-0" id = "channel-listcol">
+            <div class = "container position-relative border border-primary m-auto h-100">
+                <h3 id = "groupname" class = "mt-2 text-center">GROUPNAME</h3> 
+                <button id = "close-sidebar-btn" type = "button" class = "btn-close offset-1" data-bs-dismiss = "offcanvas" data-bs-target = "#channel-listcol"></button>
+                <hr class = "mt-1"> 
+                <ul class = "list-group text-center">
+                    <li class = "list-group-item">Channel 1</li>
+                    <li class = "list-group-item">Channel 1</li>
+                    <li class = "list-group-item">Channel 1</li>
+                    <li class = "list-group-item">Channel 1</li>
+                </ul>
+                <div class = "position-absolute bottom-0 start-50 translate-middle-x mb-2">
+                    <button type = "button" class = "btn btn-primary text-nowrap">LEAVE CHAT</button>
+                </div>
+            </div>
         </div>
         <div class = "col-lg-8 border">
             <div class = "container position-relative border border-success vh-100">
-                <h3 class = "mt-2">CHANNELNAME</h3>
-                <button type = "button" class = "btn btn-primary" data-bs-toggle = "offcanvas" data-bs-target = "#channellistcol">Group</button>
+                <button id = "open-channel-sidebar" type = "button" class = "btn btn-outline-primary px-2 py-0 mb-2" data-bs-toggle = "offcanvas" data-bs-target = "#channel-listcol"><i class = "bi bi-list"></i></button>
+                <h3 id = "channelname" class = "mt-2">CHANNELNAME</h3>
+                <button id = "open-member-sidebar" type = "button" class = "btn btn-outline-secondary px-2 py-0 mb-2 position-absolute end-0" data-bs-toggle = "offcanvas" data-bs-target = "#memberlistcol"><i class = "bi bi-people-fill"></i></button>    
                 <hr class = "mt-1">
                 <div class = "chat-wrapper overflow-auto d-inline-block w-100">
                 <table class = "table-borderless w-100 mb-0">
@@ -194,8 +211,9 @@
                 </div>
             </div>
         </div>
-        <!-- <div class = "col-2 border border-danger">
-            <h3 class = "mt-2 text-center">MEMBERS</h3>
+        <div class = "offcanvas-lg offcanvas-end col-2 border border-danger" id = "memberlistcol">
+            <button id = "close-member-btn" type = "button" class = "btn-close" data-bs-dismiss = "offcanvas" data-bs-target = "#memberlistcol"></button>
+            <h3 id = "memberlist" class = "mt-2 text-center">MEMBERS</h3>
             <hr class = "mt-1">
             <div>
                 <ul class = "member-list ps-2">
@@ -203,7 +221,7 @@
                     <li><i class = "bi bi-moon pe-2"></i>User 123</li>
                 </ul>
             </div>
-        </div>     -->
+        </div>    
     </div>
     
     
